<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 JoongAng Control, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Sungchul Choi <scchoi@joas.co.kr>, 18. 7. 2 오후 4:52
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bt_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Setting List"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:divider="@drawable/setting_list_border"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/setting_list_border"
                android:divider="@drawable/setting_list_border"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:paddingLeft="5dp"
                    android:text="Setting Password"
                    android:textColor="#818181"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textSettingPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:inputType="textUri|textVisiblePassword"
                    android:text="1234" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0"
            android:background="#fdf1ab"
            android:text="Status View"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fdf1ab"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:showDividers="none">

                <Button
                    android:id="@+id/btSettingSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSettingHideKeyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btSettingSave"
                    android:layout_alignBottom="@+id/btSettingSave"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toEndOf="@+id/btSettingSave"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_hide_kbd"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/btSettingExit"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_basicset"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSettingCommMNT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/btSettingExit"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_comm_monitor"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSettingExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_home"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:showDividers="none">

                <Button
                    android:id="@+id/btSettingDspMNT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="DSP Comm"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSettingDebugView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btSettingSave"
                    android:layout_alignBottom="@+id/btSettingSave"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toEndOf="@+id/btSettingSave"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="Debug View"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btTestErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/btSettingExit"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="Test"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSettingUpdateTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/btSettingExit"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="Update"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btFinishApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_bg"
                    android:paddingHorizontal="4dp"
                    android:text="@string/string_finish_app"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:background="@drawable/setting_list_border"
                                android:text="SW Version" />

                            <TextView
                                android:id="@+id/textSettingVersion"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:background="@drawable/setting_list_border"
                                android:text="V1.0" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:background="@drawable/setting_list_border"
                                android:text="Last Error Msg " />

                            <TextView
                                android:id="@+id/textSettingLastError"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:background="@drawable/setting_list_border" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:background="@drawable/setting_list_border"
                                android:text="Local IP Address" />

                            <TextView
                                android:id="@+id/textSettingLocalIP"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:background="@drawable/setting_list_border" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </TableRow>
                    </TableLayout>

                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>